# color_3D_tracker

./: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
include/color_3D_tracker/: stereo_processor.h  tracker.h  trainer.h  utils.h
include/color_circle_tracker/: tracker.h  trainer.h  utils.h
src/: node_tracker.cpp  node_trainer.cpp  tracker.cpp  trainer.cpp
